create profile page for users

--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,4 +1,5 @@
 {% extends "account/base_manage_password.html" %}
+{% load static %}
 {% load widget_tweaks %}
 {% load i18n %}
 {% load allauth %}
@@ -6,8 +7,8 @@
     {% trans "Set Password" %}
 {% endblock head_title %}
 {% block content %}
-    <section class="bg-gray-50 dark:bg-gray-900 min-h-screen flex justify-center items-center">
-        <div class="flex flex-col items-center justify-center px-6 py-8 max-w-md w-full mx-auto md:h-screen bg-white dark:bg-gray-700 rounded-lg shadow-lg">
+    <section class="min-h-screen flex justify-center items-center">
+        <div class="flex flex-col items-center justify-center px-6 py-8 max-w-md w-full mx-auto bg-white dark:bg-gray-700 rounded-lg shadow-lg">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
                 {% translate "Set Password" %}
             </h1>
@@ -32,6 +33,7 @@
                            class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">{{ form.password2.label }}</label>
                     {% render_field form.password2 class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" %}
                 </div>
+                {% include "Components/ui/togglePasswordVisibility.html" %}
                 <button type="submit" name="action"
                         class="w-full text-white bg-blue-600 hover:bg-blue-700 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                     {% trans 'Set Password' %}
@@ -40,3 +42,7 @@
         </div>
     </section>
 {% endblock content %}
+
+{% block extra_body %}
+	<script src="{% static 'Home/scripts/components/Helpers/handleInputPassword.js' %}"></script>
+{% endblock %}
