--- a/templates/Components/ui/navbar.html
+++ b/templates/Components/ui/navbar.html
@@ -32,7 +32,7 @@
                             </li>
                             {% if request.user.is_superuser or request.user.is_staff %}
                                 <li>
-                                    <a href="{% url "Settings:index" %}"
+                                    <a href=""
                                        class="flex gap-2 w-full px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
                                         {% include "Components/Icons/settings.html" with class="w-5 h-5" %}
                                         <span>Configuración</span>
