--- a/templates/usersessions/usersession_list.html
+++ b/templates/usersessions/usersession_list.html
@@ -15,7 +15,7 @@
         <h1 class="text-5xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white mb-4">
             {% trans "Sessions" %}
         </h1>
-        <div class="flex flex-col items-center justify-center px-6 py-8 max-w-screen-xl w-full mx-auto md:h-screen lg:py-0">
+        <div class="flex flex-col items-center px-6 py-8 max-w-screen-xl w-full mx-auto md:h-screen lg:py-0">
             <form action="{{ action_url }}" method="post">
                 {% csrf_token %}
                 <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
